// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render LokiQueryEditor with legend should render 1`] = `
<div>
  <Component
    absoluteRange={
      Object {
        "from": 1577836800000,
        "to": 1577923200000,
      }
    }
    data={
      Object {
        "request": Object {
          "range": Object {
            "from": "2020-01-01T00:00:00.000Z",
            "to": "2020-01-02T00:00:00.000Z",
          },
        },
      }
    }
    datasource={Object {}}
    history={Array []}
    onChange={[Function]}
    onRunQuery={[Function]}
    query={
      Object {
        "expr": "",
        "legendFormat": "My Legend",
        "refId": "A",
      }
    }
  />
  <div
    className="gf-form-inline"
  >
    <div
      className="gf-form"
    >
      <Component
        tooltip="Controls the name of the time series, using name or pattern. For example
        {{hostname}} will be replaced with label value for the label hostname. The legend only applies to metric queries."
        width={7}
      >
        Legend
      </Component>
      <input
        className="gf-form-input"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="legend format"
        type="text"
        value="My Legend"
      />
    </div>
  </div>
</div>
`;

exports[`Render LokiQueryEditor with legend should update absolute timerange 1`] = `
<div>
  <Component
    absoluteRange={
      Object {
        "from": 1546300800000,
        "to": 1577923200000,
      }
    }
    data={
      Object {
        "request": Object {
          "range": Object {
            "from": "2019-01-01T00:00:00.000Z",
            "to": "2020-01-02T00:00:00.000Z",
          },
        },
      }
    }
    datasource={Object {}}
    history={Array []}
    onChange={[Function]}
    onRunQuery={[Function]}
    query={
      Object {
        "expr": "",
        "legendFormat": "My Legend",
        "refId": "A",
      }
    }
  />
  <div
    className="gf-form-inline"
  >
    <div
      className="gf-form"
    >
      <Component
        tooltip="Controls the name of the time series, using name or pattern. For example
        {{hostname}} will be replaced with label value for the label hostname. The legend only applies to metric queries."
        width={7}
      >
        Legend
      </Component>
      <input
        className="gf-form-input"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="legend format"
        type="text"
        value="My Legend"
      />
    </div>
  </div>
</div>
`;
